cmake set up. First run

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,24 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.15.0)
 project(DummyDBG VERSION 0.1.0 LANGUAGES C CXX)
 
-include(CTest)
-enable_testing()
+set(CMAKE_CXX_COMPILER clang++)
+set(CMAKE_C_COMPILER clang)
+# add_compile_options(-std=c++17)
 
-add_executable(DummyDBG main.cpp)
+# include(CTest)
+# enable_testing()
 
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-include(CPack)
+add_executable(DummyDBG 
+    thirdparty/linenoise/linenoise.c
+    code/dummy_main.cpp 
+)
+
+target_include_directories(DummyDBG 
+    PRIVATE thirdparty/libelfin 
+    PRIVATE thirdparty/linenoise 
+    PRIVATE include
+)
+
+# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+# include(CPack)
